# codeAItools

./: .gitignore
caffeinate-ui/: README.md  caffeinate_qtUI.py  setup.py
chromeExt_BetterReader/: background.js  manifest.json  preview.html  preview.js
dailyCalView/: DailyCalendar.spec  README.md  calendar_viewer.py  config.json  create_pdf.py  dailyCal.sh
dailyCalView/DailyCalendarViewer.app/Contents/: Info.plist
dailyCalView/DailyCalendarViewer.app/Contents/MacOS/: DailyCalendarViewer
dailyCalView/android_calendar_viewer/: README.md  copy_assets.sh  settings.gradle.kts
dailyCalView/android_calendar_viewer/app/: build.gradle.kts
dailyCalView/android_calendar_viewer/app/src/main/: AndroidManifest.xml
dailyCalView/android_calendar_viewer/app/src/main/java/com/calendar/srirangam/: CalendarRepository.kt  CalendarScreen.kt  CalendarViewModel.kt  MainActivity.kt
dailyCalView/qt_calendar_viewer/: CMakeLists.md  CMakeLists.txt  CalendarRepository.cpp  CalendarRepository.h  DailyCalendarViewer.pro  MainWindow.cpp  MainWindow.h  Makefile  Makefile.qmake  README.md  gen_icon.py  main.cpp  moc_MainWindow.cpp  moc_predefs.h
dailyCalView/qt_calendar_viewer/DailyCalendarViewer.app/Contents/Resources/: DailyCalendar.icns
deccan_herald_epaper/: GUIDE.md  README.md  dh.svg.xml  download_epaper.py  sampleResponse.json
deccan_herald_epaper/android-app/: .gitignore  README.md  settings.gradle.kts
deccan_herald_epaper/android-app/app/: build.gradle.kts
deccan_herald_epaper/android-app/app/src/main/: AndroidManifest.xml
deccan_herald_epaper/android-app/app/src/main/java/com/example/deccanheraldepaper/: MainActivity.kt
deccan_herald_epaper/android-app/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_legacy.xml
deccan_herald_epaper/android-app/app/src/main/res/layout/: activity_main.xml
deccan_herald_epaper/android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
deccan_herald_epaper/android-app/app/src/main/res/values-night/: themes.xml
filterCoffee/: README.md
filterCoffee/FilterCoffee/: CaffeinateManager.swift  FilterCoffeeApp.swift  Info.plist  MenuBarView.swift
filterCoffee/FilterCoffee.xcodeproj/: project.pbxproj
filterCoffee/FilterCoffee.xcodeproj/project.xcworkspace/xcuserdata/dinesh.ramalingam.xcuserdatad/: UserInterfaceState.xcuserstate
filterCoffee/FilterCoffee.xcodeproj/xcuserdata/dinesh.ramalingam.xcuserdatad/xcschemes/: xcschememanagement.plist
filterCoffee/FilterCoffee/Assets.xcassets/FilterCoffeeGlyph.imageset/: Contents.json
polygonMerger_claudeOpus53/: README.md  canvas_widget.py  main.py  requirements.txt
polygonMerger_claudeSonnet45/: README.md  canvas_widget.py  main.py  requirements.txt
polygonMerger_claudeSonnet45/cpp/: CMakeLists.txt  README.md  canvaswidget.cpp  canvaswidget.h  mainwindow.cpp  mainwindow.h
polygonMerger_codex53/: README.md  canvas_widget.py  main.py  requirements.txt
reading_mode_markdown/: README.md  background.js  content.js  preview.html  preview.js
sampleSNMP/: SNMP_README.md  snmp_trap_parser.py  snmp_trap_sender.py
thehindu_epaper/: README.md  cookie.txt  download_epaper.py  run.sh
thithiCalendar/: requirements.txt  thithi_calendar.py
